--- a/data-analyst.html
+++ b/data-analyst.html
@@ -47,6 +47,10 @@
   
 	
 <!--Begin body here --> 
+<h5><a href='https://careers.jobscore.com/careers/thegreentreegroup/jobs/bio-statistical-research-consultant-aAFeJiRVar6yZPaKld2Sj6'>Bio-Statistical Research Consultant #0095 job at The Greentree Group in Beavercreek, OH, powered by JobScore</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692244858-senior-analyst-data-and-analysis'>Publicis Groupe Senior Analyst, Data and Analysis | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-25</p>
@@ -93,7 +97,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premisehealth/job/o8cBafwP'>Premise Health Careers - Member Health Management Data Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/premisehealth/job/o8cBafwP'>Premise Health Careers - Member Health Management Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -117,11 +121,11 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/UpliftEducation1/743999692250327-it-data-analyst-central-management-office'>Uplift Education IT Data Analyst: Central Management Office | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/UpliftEducation1/743999692250327-it-data-analyst-central-management-office'>Uplift Education IT Data Analyst: Central Management Office | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://adheretech.applytojob.com/apply/9E32avlnQ3/Data-Analyst'>Data Analyst - AdhereTech - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://adheretech.applytojob.com/apply/9E32avlnQ3/Data-Analyst'>Data Analyst - AdhereTech - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -186,12 +190,12 @@ application. LinkedIn profile. Loading. Apply with Linkedin. Profile added.</p>
 <p>Jul 14, 2019 ... Quantitative Data Analyst. New York. Hylink - New York City ? Finance. Full-time. 
 Submit your application. Resume/CV ?. ATTACH RESUME/CV. Couldn't?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/u/14a219d8-b58f-401f-b54a-2ba3b8971a6a'>U.Group - Data Analyst (Active secret or interim secret clearance)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/u/14a219d8-b58f-401f-b54a-2ba3b8971a6a'>U.Group - Data Analyst (Active secret or interim secret clearance)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... U.Group is an Advanced Technology and Creative Design company launched in 
 2019 after combining the data and domain expertise of ByteCubed with the?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/o2ebrands/4c7a2625-ba87-42d5-9c13-c46b0594e102/apply'>O2E Brands - Data Analyst - O2E Brands</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/o2ebrands/4c7a2625-ba87-42d5-9c13-c46b0594e102/apply'>O2E Brands - Data Analyst - O2E Brands</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Data Analyst - O2E Brands. Vancouver, BC. Technology. Full-time. Submit your 
 application. LinkedIn profile. Loading. Apply with Linkedin. Profile added.</p>
@@ -201,7 +205,7 @@ application. LinkedIn profile. Loading. Apply with Linkedin. Profile added.</p>
 <p>3 days ago ... If yes, do you have any reason to believe that your acceptance of employment 
 from Ironclad Technology Services would breach or violate any non-compete?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oOrAafwJ&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=npSsSKwQ'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oOrAafwJ&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=npSsSKwQ'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
@@ -225,7 +229,7 @@ from Ironclad Technology Services would breach or violate any non-compete?...</p
 <p><span class="badge badge-light">Canberra Canberra Canberra Canberra</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Modis3/743999692206865-senior-data-analyst'>Modis Senior Data Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Modis3/743999692206865-senior-data-analyst'>Modis Senior Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -276,7 +280,7 @@ not subject you to adverse treatment). Our company values diversity.</p>
 <p><span class="badge badge-light">London, England, United Kingdom London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://datatonic.workable.com/j/EA28F2A1FE'>Datatonic - Jobs: BI Analyst - Apply online</a></h5> 
+<h5><a href='https://datatonic.workable.com/j/EA28F2A1FE'>Datatonic - Jobs: BI Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light">Stockholm Stockholm Stockholm London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -318,7 +322,7 @@ South Carolina. Apply. Description. Description. Want to be a part of a growing?
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/artefact/jobs/4137429002'>Job Application for Junior Data Analyst at Artefact</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/artefact/jobs/4137429002'>Job Application for Junior Data Analyst at Artefact</a></h5> 
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -359,7 +363,7 @@ at BAME Recruitment Limited.</p>
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Data Analyst at Girteka Logistics.</p>
 <hr/>
-<h5><a href='https://telegraph.workable.com/j/A3CEB200CD?viewed=true'>The Telegraph - Jobs: Data Analyst - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://telegraph.workable.com/j/A3CEB200CD?viewed=true'>The Telegraph - Jobs: Data Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Data Analyst at The Telegraph.</p>
 <hr/>
@@ -367,7 +371,7 @@ at BAME Recruitment Limited.</p>
 <p><span class="badge badge-light">Auckland</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://telegraph.workable.com/j/0E9D1E888A'>The Telegraph - Jobs: Senior Data Analyst, Product - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://telegraph.workable.com/j/0E9D1E888A'>The Telegraph - Jobs: Senior Data Analyst, Product - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -399,7 +403,7 @@ at BAME Recruitment Limited.</p>
 <p><span class="badge badge-light">Boston,</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/shorelight/job/oz8xafw8'>Shorelight Education Careers - Shorelight ? Senior Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/shorelight/job/oz8xafw8'>Shorelight Education Careers - Shorelight ? Senior Data Analyst</a></h5> 
 <p><span class="badge badge-light">Boston,</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -425,7 +429,7 @@ interpreting data; Transform data to information that will facilitate decision m
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/appannie/jobs/1780806'>Job Application for Data Analyst Intern, SG at App Annie</a></h5> 
+<h5><a href='https://boards.greenhouse.io/appannie/jobs/1780806'>Job Application for Data Analyst Intern, SG at App Annie</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -467,10 +471,6 @@ emergent technologies, including the transition to digitized data (vs. paper-bas
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oyrAafwt&__jvst=Employee+Referral&__jvsd=ssyfAhwB&__jvsc=Twitter&bid=nUIvPKwb'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-07-21</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzH9Vfw4&k=Job&j=oCOAafwU&__jvst=Employee&__jvsd=smBeYgwU&__jvsc=Twitter&bid=n4wvPKw9'>Liferay, Inc. Careers - Senior Data Analyst</a></h5> 
-<p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
 
